package model

case class Action(component: Component, signal: Signal.Value)
