package model

class Alarm(pin: Int) extends Component(pin)
