package model

class Sensor(pin: Int) extends Component(pin)
